feat: Add user registration and authentication
- Add user model (`models/userModel.js`)
- Add registration form validation (`public/register.js`)
- Add authentication routes (`routes/authRoutes.js`)
- Update authors routes (`routes/authors.js`)
- Update server configuration (`server.js`)
- Update views for authors (`views/authors/index.ejs`, `views/authors/new.ejs`)
- Update layout and header partials (`views/layouts/layout.ejs`, `views/partials/header.ejs`)
- Add error message partial (`views/partials/errorMessage.ejs`)
- Add registration form view (`views/registrationform/register.ejs`)
- Update environment variables (`.env`)
- Update package dependencies (`package-lock.json`, `package.json`)
```

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=mongodb://localhost:27017/expressbyamos
+DATABASE_URL='mongodb+srv://cleverdraw5000:yEGNWGimC9ah6ovD@cluster0.rwtvh.mongodb.net/'
+PORT=3000
