--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "devEngine": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.10.1"
+    "mongoose": "^8.11.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.7",
